--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -40,6 +40,12 @@ All Products
                         </a>
                     </p>
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3 text-muted">
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                     <p class="mt-3 text-white">{{ product.description|safe }}</p>
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
