--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -29,18 +29,18 @@ Contact
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2 text-white">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="name">Your Name</label>
+                        <label for="name">Your Name:</label>
                         {{ form.name }}
                     </div>
                     <div class="form-group">
-                        <label for="email">Your Email</label>
+                        <label for="email">Your Email:</label>
                         {{ form.email }}
                     </div>
                     <div class="form-group">
-                        <label for="message" class="message-label">Your Message</label>
+                        <label for="message" class="message-label">Your Message:</label>
                         {{ form.message }}
                     </div>
-                    <div>
+                    <div class="text-right">
                         <button class="btn btn-peach rounded-pill" type="submit">Submit</button>
                     </div>
                 </form>
