--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -26,7 +26,7 @@ Contact
 
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8">
-                <form method="POST" action="{% url 'add_product' %}" class="form mb-2 text-white">
+                <form method="POST" action="{% url 'contact' %}" class="form mb-2 text-white">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="name">Your Name:</label>
