--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -26,7 +26,7 @@ Contact
 
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8">
-                <form method="POST" action="{% url 'contact' %}" class="form mb-2 text-white">
+                <form method="POST" action="{% url 'contact_us' %}" class="form mb-2 text-white">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="name">Your Name:</label>
@@ -37,8 +37,12 @@ Contact
                         {{ form.email }}
                     </div>
                     <div class="form-group">
+                        <label for="Subject">Subject:</label>
+                        {{ form.subject }}
+                    </div>
+                    <div class="form-group">
                         <label for="message" class="message-label">Your Message:</label>
-                        {{ form.message }}
+                        {{ form.content }}
                     </div>
                     <div class="text-right">
                         <button class="btn btn-peach rounded-pill" type="submit">Submit</button>
