--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -34,7 +34,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="{% url 'contact' %}">
+            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="{% url 'contact_us' %}">
                 Contact Us
             </a>
         </li>
