--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
         <div id="topnav" class="row bg-custom pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link logo-link">
-                    <img src="/media/wblogo.png" width="44" height="40" class="d-inline-block align-top" alt="">
+                    <img src="https://woof-and-bean-ci-m4.s3.amazonaws.com/wblogo.png" width="44" height="40" class="d-inline-block align-top" alt="">
                     <span class="logo-font text-logo my-0"><strong>Woof</strong> & <strong>Bean</strong></span>
                 </a>
             </div>
