--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -43,9 +43,9 @@ Home
                             <tr>
                                 <td class="p-3 w-25">
                                     {% if item.product.image %}
-                                    <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                                    <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}" style="max-width: 96px;">
                                     {% else %}
-                                    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                                    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}" style="max-width: 96px;">
                                     {% endif %}
                                 </td>
                                 <td class="py-3">
