--- a/static/css/base.css
+++ b/static/css/base.css
@@ -426,9 +426,53 @@ a.category-badge > span.badge:hover {
     body {
         height: calc(100vh - 132px);
     }
+
+    .display-4.logo-font.text-custom {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.10rem;
+    }
+
+    .nav-link i.fa-lg,
+    .text-peach-nav {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.rounded-pill,
+    .btn.btn-peach.rounded-pill {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-black.rounded-pill.btn-lg,
+    .btn.btn-peach.rounded-pill.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
+
+    ul {
+        padding-right: .6rem;
+        padding-left: 0rem;
+        margin-top: 0.6rem;
+        margin-bottom: 0.6rem;
+    }
 }
 
-/* -------------------------------- Media Queries for Contact Form */
+/* -------------------------------- Media Queries for Contact Form
 
 /* Center the contact form on desktop screens */
 @media (min-width: 992px) {
